--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
             <meta-data
                 android:name="android.app.shortcuts"
-                android:resource="@xml/link" />
+                android:resource="@xml/shortcut" />
 
         </activity>
         <activity
