--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,9 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="text/*" />
-                <data android:scheme="file" />
-                <data android:scheme="content" />
+<!--                <data android:mimeType="text/*" />-->
+<!--                <data android:scheme="file" />-->
+<!--                <data android:scheme="content" />-->
             </intent-filter>
         </activity>
         <activity
